login with google

--- a/InstaStay/appsettings.json
+++ b/InstaStay/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "67079168087-r3efiihtfm4cb9gjik4tmpipglm11guu.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+    
+  },
+ 
+
   "AllowedHosts": "*"
 }
