Hotel Images Handling

--- a/InstaStay/InstaStay.csproj
+++ b/InstaStay/InstaStay.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\Ads\" />
     <Folder Include="wwwroot\images\HotelImages\" />
+    <Folder Include="wwwroot\images\HIL\" />
   </ItemGroup>
 
   <ItemGroup>
