--- a/InstaStay/InstaStay.csproj
+++ b/InstaStay/InstaStay.csproj
@@ -27,6 +27,7 @@
     <Folder Include="wwwroot\images\Ads\" />
     <Folder Include="wwwroot\images\HotelImages\" />
     <Folder Include="wwwroot\images\HIL\" />
+    <Folder Include="wwwroot\images\Amentities\" />
   </ItemGroup>
 
   <ItemGroup>
