--- a/InstaStay/InstaStay.csproj
+++ b/InstaStay/InstaStay.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -31,6 +31,7 @@
     <Folder Include="wwwroot\images\HotelImages\" />
     <Folder Include="wwwroot\images\HIL\" />
     <Folder Include="wwwroot\images\Amentities\" />
+    <Folder Include="wwwroot\images\NewFolder\" />
     <Folder Include="wwwroot\images\RoomImages\" />
   </ItemGroup>
 
