--- a/InstaStay/appsettings.json
+++ b/InstaStay/appsettings.json
@@ -23,6 +23,8 @@
     "SenderEmail": "mohammeddarwish66609@gmail.com",
     "SenderPassword": "yyjr tzai ibip ncyb"
   },
+  "Gemini": {
+    "ApiKey": "AIzaSyBz9Yf_ZeYhkmvxDkiJsD3J9xRq1RLoPYE"
+  },
   "AllowedHosts": "*"
-
 }
